# JanusEngine-old

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateProjectFiles.bat  Janus.janusproj  README.md
Janus/: CMakeLists.txt
Janus.Build/: CommandLine.cs  CommandLineAttributes.cs  Configuration.cs  Globals.cs  Janus.Build.csproj  Log.cs  Program.cs  ProjectInfo.cs  Utilities.cs
Janus.Build/Projects/: ProjectFormat.cs  ProjectGenerator.cs  Solution.cs
Janus.Build/Projects/VisualStudioCode/: VisualStudioCodeInstance.cs
Janus/src/: Application.cpp  Application.h  Core.h  janus.h  jnpch.h
Janus/src/Asset/: Asset.h  AssetTypes.h
Janus/src/Core/: Application.cpp  Application.h  Buffer.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  Ref.h  Timestep.h  UUID.cpp  UUID.h  Window.h
Janus/src/Core/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Janus/src/Debug/: Instrumentor.h
Janus/src/Graphics/: Camera.cpp  Camera.h  Environment.cpp  Environment.h  FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.cpp  IndexBuffer.h  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  Pipeline.cpp  Pipeline.h  RenderCommandQueue.cpp  RenderCommandQueue.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  SceneRenderer.cpp  SceneRenderer.h  Shader.cpp  Shader.h  ShaderLibrary.cpp  ShaderLibrary.h  ShaderUniform.cpp  ShaderUniform.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Janus/src/ImGui/: Colours.cpp  Colours.h  ImGui.h  ImGuiLayer.cpp  ImGuiLayer.h  ImGuiUtilities.h
Janus/src/Math/: AABB.h  Ray.h
Janus/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Janus/src/Scene/: Camera.cpp  Camera.h  Components.h  EditorCamera.cpp  EditorCamera.h  Entity.cpp  Entity.h  InspectorPanel.cpp  InspectorPanel.h  Scene.cpp  Scene.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Janus/src/Utilities/: StringUtils.cpp  StringUtils.h
Janus/vendors/Glad/: CMakeLists.txt
Janus/vendors/Glad/include/glad/: glad.h
Janus/vendors/Glad/src/: glad.c
SceneEditor/: CMakeLists.txt
SceneEditor/assets/: tfxpcbcfa_LOD0.fbx
SceneEditor/assets/shaders/: janus_pbr.glsl  janus_quad.glsl
SceneEditor/src/: SceneEditor.cpp
Scripts/Windows/: CallBuildTool.bat  GetMSBuildPath.bat
